force-app/main/default/objects/Import_Configuration__mdt/Import_Configuration__mdt.object-meta.xml
<CustomObject>
    <label>Import Configuration</label>
    <pluralLabel>Import Configurations</pluralLabel>
</CustomObject>