force-app/main/default/objects/Import_Configuration__mdt/fields/Servicer_File__c.field-meta.xml
<CustomField>
    <fullName>Servicer_File__c</fullName>
    <label>Servicer File</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Cohen</fullName>
                <default>true</default>
                <label>Cohen</label>
            </value>
            <value>
                <fullName>Midland</fullName>
            </value>
            <value>
                <fullName>Wells Fargo</fullName>
            </value>
            <value>
                <fullName>SLS</fullName>
            </value>
            <value>
                <fullName>Lending Homes</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>