force-app/main/default/objects/Import_Configuration__mdt/listViews/Servicer_File_Details.listView-meta.xml
<ListView>
    <fullName>Servicer_File_Details</fullName>
    <columns>Key__c</columns>
    <columns>Servicer_File__c</columns>
    <columns>MasterLabel</columns>
    <columns>Column_Name__c</columns>
    <columns>Field_Name__c</columns>
    <columns>sObject__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>Servicer_File__c</field>
        <operation>notEqual</operation>
    </filters>
    <label>Servicer File Details</label>
</ListView>